--- a/portfolio.html
+++ b/portfolio.html
@@ -15,19 +15,21 @@
   </head>
   <body class="body-portfolio">
     <header>
-        <a href="index.html" class="web-logo">Web<span class="studio-logo">Studio</span></a>
-  
-        <nav>
-          <ul>
-            <li><a href="index.html" class="studio-menu">Studio</a></li>
-            <li><a href="portfolio.html" class="portfolio-menu">Portfolio</a></li>
-            <li\><a href="index.html" class="contacts-menu">Contacts</a></li>
-          </ul>
-        </nav>
-  
-        <a href="mailto:info@devstudio.com" class="gmail">info@devstudio.com</a>
-  
-        <a href="tel:+11(000)111-11-11" class="tel">+11 (000) 111-11-11</a>
+      <a href="index.html" class="web-logo"
+        >Web<span class="studio-logo">Studio</span></a
+      >
+
+      <nav>
+        <ul>
+          <li><a href="index.html" class="studio-menu">Studio</a></li>
+          <li><a href="portfolio.html" class="portfolio-menu">Portfolio</a></li>
+          <li><a href="index.html" class="contacts-menu">Contacts</a></li>
+        </ul>
+      </nav>
+
+      <a href="mailto:info@devstudio.com" class="gmail">info@devstudio.com</a>
+
+      <a href="tel:+11(000)111-11-11" class="tel">+11 (000) 111-11-11</a>
     </header>
 
     <main>
@@ -37,10 +39,20 @@
 
           <ul>
             <li><button class="menu-button-all" type="button">All</button></li>
-            <li><button class="menu-button-web-site" type="button">Web Site</button></li>
+            <li>
+              <button class="menu-button-web-site" type="button">
+                Web Site
+              </button>
+            </li>
             <li><button class="menu-button-app" type="button">App</button></li>
-            <li><button class="menu-button-design" type="button">Design</button></li>
-            <li><button class="menu-button-marketing" type="button">Marketing</button></li>
+            <li>
+              <button class="menu-button-design" type="button">Design</button>
+            </li>
+            <li>
+              <button class="menu-button-marketing" type="button">
+                Marketing
+              </button>
+            </li>
           </ul>
         </div>
       </section>
@@ -137,13 +149,14 @@
     </main>
 
     <footer class="footer">
-        <a href="index.html" class="web-logo">Web<span class="studio-logo">Studio</span></a>
-  
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
-      </footer>
+      <a href="index.html" class="web-logo"
+        >Web<span class="studio-logo">Studio</span></a
+      >
+
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
-
