--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
 
     <footer class="footer">
       <a href="index.html" class="web-logo"
-        >Web<span class="studio-logo">Studio</span></a
-      >
+        >Web<span class="studio-logo-footer">Studio</span></a>
 
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
