--- a/portfolio.html
+++ b/portfolio.html
@@ -149,9 +149,8 @@
     </main>
 
     <footer class="footer">
-      <a href="index.html" class="web-logo"
-        >Web<span class="studio-logo">Studio</span></a
-      >
+      <a href="index.html" class="web-logo-footer"
+        >Web<span class="studio-logo-footer">Studio</span></a>
 
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
