--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </main>
 
     <footer class="footer">
-      <a href="index.html" class="web-logo"
+      <a href="index.html" class="web-logo-footer"
         >Web<span class="studio-logo-footer">Studio</span></a>
 
       <p class="footer-text">
